@@ -1,5 +1,9 @@
 Release notes for python-sflow library and splitsflow application
 
+30-03-2017
+* sflow.py - v 0.2.1: raise EOFError occured in CounterSample.unpack() routine
+  * print statements to see what's going - temporary. To be captured by calling routine
+
 06-01-2017
 * splitsflow.py - v0.4.2
   * bug: logger always initialized with 'debug'. Modified in cfg['loglevel']
